jasn/examples/invalid/multiple_root_values.jasn
// Multiple values at root level (not in array/object)
42
"another value"
